force-app/main/default/objects/Account_Relationships__c/Account_Relationships__c.object-meta.xml
<CustomObject>
    <description>Connects an Account to Other Accounts</description>
    <label>Account Relationship</label>
    <nameField>
        <label>Account Relationships Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>