force-app/main/default/objects/Account_Relationships__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationship (Child Account)</relationshipLabel>
    <relationshipName>Account_Relationship1</relationshipName>
    <type>Lookup</type>
</CustomField>