force-app/main/default/objects/Account_Relationships__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationship</relationshipLabel>
    <relationshipName>Account_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>