force-app/main/default/objects/Account_Relationships__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Transcription</fullName>
            </value>
            <value>
                <fullName>Tracking &amp; Transcription</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>